--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@sanity/image-url": "1",
     "@sanity/vision": "3",
+    "@supabase/supabase-js": "^2.39.2",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -30,7 +31,9 @@
     "next-sanity": "5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.4.1",
+    "rss-parser": "^3.13.0",
     "sanity": "3",
     "sharp": "^0.31.3",
     "styled-components": "6",
